--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,12 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>eureka</module>
+        <module>feign</module>
+        <module>hystrix</module>
+        <module>ribbon</module>
+        <module>ribbon-consumer</module>
+        <module>zuul</module>
+    </modules>
 </project>
